# life-stream-cli

./: .gitignore  MANIFEST  README.md  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
app/: __init__.py  client.py  main.py  sandbox.py
life-stream-cli/: client.py  config.py
life_stream_cli/: __init__.py  client.py
life_stream_cli/subcommands/: config.py
life_stream_cli/subcommands/config/: __init__.py  config_utils.py  credentials_utils.py
