[tool.poetry]
name = "life-stream-cli"
version = "0.2.3"
description = "A client for the Life Stream service"
authors = ["Sergey Royz <zjor.se@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zjor/life-stream-cli"
repository = "https://github.com/zjor/life-stream-cli"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
click = "^7.1.2"
colorama = "^0.4.4"
termcolor = "^1.1.0"
prompt-toolkit = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lst = "life_stream_cli:cli"